--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
+  <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
 </head>
 
 <body>
